# news-aggregator

./: .env.example  .gitignore  DEVELOPMENT_GUIDE.md  README.md  alembic.ini  config.py  create_test_user.py  daily_brief.json  database.py  docker-compose.yml  fix_brief.py  learning_and_implementation_plan.md  local_north_star_and_sdk_requirements.md  models.py  north_star_aws_plan.md  patch.py  patch2.py  patch_format.py  product_brief.md  product_brief_v2.md  pyproject.toml  requirements.txt  start_services.sh
alembic/: env.py
alembic/versions/: 1a2b3c4d5e6f_initial_migration.py  786187746bcc_add_per_user_telegram_fields_and_.py  95b87fa96c25_final_v1_schema.py  cebd6dce1828_add_interest_decay_fields.py
api/: main.py  observer.py  query_engine.py
api/prompts/: rag_prompt.txt
docs/: ARCHITECTURE.md  AWS_NORTH_STAR.md  OVERHAUL_PLAN.md  ROADMAP.md  TELEGRAM_GUIDE.md  TWILIO_GUIDE.md  data_contracts.md  hybrid_search_metadata.md  map_reduce_summarization.md  prompt_engineering.md  rag_and_query_translation.md  rag_best_practices.md  scaling_vector_dbs.md  structured_outputs.md  transformers.md  vector_databases.md
ingestion/: config.py  consumer_triage.py  producer.py
ingestion/prompts/: triage_prompt.txt  triage_system_prompt.txt
newsagg/: config.py
newsagg/api/: main.py  observer.py  query_engine.py
newsagg/bot/: handlers.py  poller.py  telegram_api.py
newsagg/core/: embeddings.py  llm.py  (+2 more)
processor/: daily_brief.py
scripts/: backfill_reingest.py  dev.sh
storage/: cleanup.py  consumer_storage.py  vector_store.py
tests/: test_integration_e2e.py
(+27 files in other folders)
